--- a/style.css
+++ b/style.css
@@ -5,11 +5,9 @@
     box-sizing: border-box;
 }
 
-/*Variables*/
+/*Variables/Styles*/
 :root {
     --primary-color: #e50914;
-    --dark-color: #141414;
-    --light-color: #f4f4f4;
 }
 
 /*Home Styling*/
@@ -18,6 +16,19 @@
     font-size: 6rem;
     flex-grow: 2;
     text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#menu {
+    color: var(--primary-color);
+    background: url(images/white.png) no-repeat center;
+    background-size: 3rem;
+    font-size: 4rem;
+}
+
+#menu:hover {
+    cursor: pointer;
+    opacity: 0.9;
 }
 
 .homeHeader {
@@ -51,7 +62,7 @@
 
 .btn {
     display: inline-block;
-    background: blue;
+    background: var(--primary-color);
     color: #fff;
     padding: 0.4rem 1.3rem;
     font-size: rem;
@@ -59,10 +70,20 @@
     cursor: pointer;
     transition: opacity 0.2s ease-in;
     border-radius: 5px;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .btn:hover {
     opacity: 0.9;
+}
+
+.homeHeader-middle {
+    position: relative;
+    z-index: 2;
+    color:white;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /*About Styling*/
