--- a/style.css
+++ b/style.css
@@ -31,6 +31,16 @@
     opacity: 0.9;
 }
 
+#learnMore {
+    width: 40px;
+    height: 35px;
+}
+
+#learnMore:hover {
+    cursor: pointer;
+    opacity: 0.9;
+}
+
 .homeHeader {
     width: 100%;
     height: 100vh;
@@ -60,6 +70,14 @@
     align-items: center;
 }
 
+.homeHeader-bottom {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15rem;
+}
+
 .btn {
     display: inline-block;
     background: var(--primary-color);
@@ -81,8 +99,10 @@
 .homeHeader-middle {
     position: relative;
     z-index: 2;
-    color:white;
+    color: white;
     text-align: center;
+    font-size: 2rem;
+    margin-top: 5rem;
     font-family: 'Montserrat', sans-serif;
 }
 
