--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 /*Variables/Styles*/
 :root {
-    --primary-color: #e50914;
+    --primary-color: #c40b13;
 }
 
 /*Home Styling*/
@@ -16,7 +16,7 @@
     font-size: 6rem;
     flex-grow: 2;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Oxygen', sans-serif;
 }
 
 #menu {
@@ -89,7 +89,7 @@
     transition: opacity 0.2s ease-in;
     border-radius: 5px;
     text-decoration: none;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Oxygen', sans-serif;
 }
 
 .btn:hover {
@@ -103,7 +103,7 @@
     text-align: center;
     font-size: 2rem;
     margin-top: 5rem;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Oxygen', sans-serif;
 }
 
 /*About Styling*/
