--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-h1,h2,h3,h4,h5 {
+h1,h2,h3,h4,h5,a {
     font-family: 'Oxygen', sans-serif;
 }
 
@@ -31,6 +31,26 @@ p {
 
 #menu:hover {
     cursor: pointer;
+    opacity: 0.9;
+}
+
+.menuItems {
+    border: 3px solid black;
+    width: 24%;
+}
+
+.menuItems a{
+    color: white;
+    text-decoration: none;
+    font-size: 2rem;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.menuItems a:hover{
     opacity: 0.9;
 }
 
@@ -65,7 +85,7 @@ p {
 }
 
 .homeLogo {
-    width: 40%;
+    width: 30%;
     height: auto;
 }
 
