--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@
     box-sizing: border-box;
 }
 
-h1,h2,h3,h4,h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-family: 'Oxygen', sans-serif;
 }
 
+a,
 p {
     font-family: 'Roboto', sans-serif;
 }
@@ -16,6 +21,8 @@ p {
 /*Variables/Styles*/
 :root {
     --primary-color: #c40b13;
+    --secondary-color: #f69314;
+    --last-color: #621295;
 }
 
 /*Animation Classes*/
@@ -27,6 +34,7 @@ p {
     background: url(images/white.png) no-repeat center;
     background-size: 3rem;
     font-size: 4rem;
+    transition: opacity 0.2s ease-in;
 }
 
 #menu:hover {
@@ -34,9 +42,41 @@ p {
     opacity: 0.9;
 }
 
+.menuItems {
+    border: 3px solid black;
+    width: 20%;
+    background: white;
+    opacity: 0;
+}
+
+.toggleMenu {
+    opacity: 1;
+}
+
+.menuItems a {
+    color: white;
+    text-decoration: none;
+    font-size: .8rem;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    transition: opacity 0.2s ease-in;
+    margin-top: 5px;
+    border-bottom: 1px solid transparent;
+}
+
+.menuItems a:hover {
+    opacity: 0.9;
+    border-bottom: 1px solid #fff;
+}
+
 #learnMore {
     width: 40px;
     height: 35px;
+    transition: opacity 0.2s ease-in;
 }
 
 #learnMore:hover {
@@ -65,7 +105,7 @@ p {
 }
 
 .homeLogo {
-    width: 40%;
+    width: 30%;
     height: auto;
 }
 
@@ -104,19 +144,35 @@ p {
     opacity: 0.9;
 }
 
+#cSeeMore {
+    background: var(--secondary-color);
+}
+
 .homeHeader-middle {
+    width: 80%;
+    margin: 0 auto;
     position: relative;
     z-index: 2;
     color: white;
     text-align: center;
-    font-size: 2rem;
-    margin-top: 5rem;
+    font-size: 1.9rem;
     font-family: 'Roboto', sans-serif;
+    padding-top: 1rem;
 }
 
 footer {
-    text-align: center;
+    background: var(--last-color);
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     display: none;
+}
+
+footer p {
+    color: white;
+    font-size: 1.4rem;
 }
 
 /*Home Main Content*/
@@ -129,7 +185,7 @@ footer {
     width: 80%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 12rem;
 }
 
@@ -141,8 +197,8 @@ footer {
 .mainCreate img {
     filter: grayscale(20%);
     border-radius: 12px;
-    width: 80%;
-    height: 500%;
+    width: 95%;
+    height: 700%;
 }
 
 /*About Styling*/
