--- a/style.css
+++ b/style.css
@@ -148,6 +148,20 @@ p {
     background: var(--secondary-color);
 }
 
+.fa-circle{
+    margin-top: 1.5rem;
+    color: var(--secondary-color);
+    opacity: .5
+}
+
+.fa-circle:hover{
+    opacity: 1
+}
+
+#fSeeMore {
+    background: var(--secondary-color);
+}
+
 .homeHeader-middle {
     width: 80%;
     margin: 0 auto;
@@ -163,7 +177,7 @@ p {
 footer {
     background: var(--last-color);
     width: 100%;
-    height: 2rem;
+    height: 1.8rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -196,6 +210,27 @@ footer p {
 
 .mainCreate img {
     filter: grayscale(20%);
+    border-radius: 12px;
+    width: 95%;
+    height: 700%;
+}
+
+.mainFind {
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 12rem;
+    display: none;
+}
+
+.findDiv {
+    text-align: center;
+    align-self: center;
+}
+
+.mainFind img {
+    filter: grayscale(90%);
     border-radius: 12px;
     width: 95%;
     height: 700%;
