--- a/style.css
+++ b/style.css
@@ -187,18 +187,36 @@ p {
 }
 
 footer {
-    background: var(--primary-color);
+/*    background: var(--primary-color);*/
     width: 100%;
-    height: 1.8rem;
+    height: 3rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     display: none;
+    color: #999;
 }
 
 footer p {
-    color: white;
     font-size: 1.4rem;
+    flex-grow: 2;
+    margin-left: 1rem;
+}
+
+footer a {
+    color: #999;
+    text-decoration: none;
+    margin-left: 1rem;
+    transition: opacity 0.2s ease-in;
+}
+
+footer a:hover {
+    color:white;
+    opacity: .9;
+}
+
+footer a:last-child {
+    margin-right: 1rem;
 }
 
 /*Home Main Content*/
