--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ p {
     margin-top: 8.5rem;
 }
 
-.homeHeader-bottom h1{
+.homeHeader-bottom h1 {
     color: white;
 }
 
@@ -187,7 +187,7 @@ p {
 }
 
 footer {
-/*    background: var(--primary-color);*/
+    /*    background: var(--primary-color);*/
     width: 100%;
     height: 3rem;
     display: flex;
@@ -211,7 +211,7 @@ footer a {
 }
 
 footer a:hover {
-    color:white;
+    color: white;
     opacity: .9;
 }
 
@@ -299,13 +299,13 @@ footer a:last-child {
 
 /*About Styling*/
 .aBody {
-    display: grid;
-    grid-template-rows: repeat(10,1fr);
     background-color: #999;
 }
 
 .bigLogo {
     margin: 0 auto;
+    width: 500px;
+    height: 160px;
     grid-column: 1;
     grid-row: 1/10;
 }
@@ -314,32 +314,32 @@ footer a:last-child {
     margin: 0 auto;
     background: white;
     width: 1200px;
-    height: auto;
+    height: 600px;
     grid-column: 1;
-    grid-row: 3/10;
+    grid-row: 2/10;
 }
 
 .container {
-    margin-top: 2rem;
     display: grid;
     margin: 0 auto;
     grid-template-columns: repeat(2, 1fr);
     width: 95%;
+    height: 600px;
     grid-gap: 2rem;
 }
 
-.container p{
+.container p {
     font-size: .8rem;
     padding-right: 1rem;
     border-right: 1px solid black;
 }
 
-.container img{
+.container img {
     height: auto;
     width: 1.3rem;
 }
 
-.container h1{
+.container h1 {
     margin: 0 auto;
 }
 
@@ -347,11 +347,12 @@ footer a:last-child {
     display: flex
 }
 
-.contribution img{
+.contribution img {
     height: auto;
     width: 4rem;
     margin-right: 1rem;
 }
+
 .marketing {
     display: grid;
     justify-items: center;
@@ -384,11 +385,11 @@ footer a:last-child {
 }
 
 .aBody footer {
-    width: 100%;
+    width: 200%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    color: white;
+    color: black;
 }
 
 .aBody footer p {
@@ -398,17 +399,30 @@ footer a:last-child {
 }
 
 .aBody footer a {
-    color: white;
+    color: black;
     text-decoration: none;
     margin-left: 1rem;
     transition: opacity 0.2s ease-in;
 }
 
 .aBody footer a:hover {
-    color:white;
-    opacity: .9;
+    color: black;
+    opacity: .6;
 }
 
 .aBody footer a:last-child {
     margin-right: 1rem;
+}
+
+.aboutMenu {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: 'Oxygen', sans-serif;
+}
+
+.aS {
+    margin-right: 2rem;
 }
