--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h5 {
 
 a,
 p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Oxygen', sans-serif;
 }
 
 /*Variables/Styles*/
@@ -49,10 +49,8 @@ p {
     position: relative;
     z-index: 2;
     top: -30px;
-    left: 22px;
-    border: 3px solid var(--primary-color);
+    left: 15px;
     width: 20%;
-    background: white;
     opacity: 0;
 }
 
@@ -61,7 +59,7 @@ p {
 }
 
 .menuItems a {
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 1.2rem;
     position: relative;
@@ -78,7 +76,7 @@ p {
 
 .menuItems a:hover {
     opacity: 0.9;
-    border-bottom: 1px solid black;
+    color: var(--primary-color);
 }
 
 #learnMore {
@@ -115,6 +113,7 @@ p {
 .homeLogo {
     width: 30%;
     height: auto;
+    margin-top: 1rem;
 }
 
 .homeHeader-top {
@@ -138,6 +137,7 @@ p {
 
 .homeHeader-bottom h1 {
     color: white;
+    font-size: 1rem;
 }
 
 .btn {
@@ -160,18 +160,22 @@ p {
 
 #cSeeMore {
     background: var(--primary-color);
+    margin-top: 1rem;
 }
 
 #fSeeMore {
     background: var(--primary-color);
+    margin-top: 1rem;
 }
 
 #sSeeMore {
     background: var(--primary-color);
+    margin-top: 1rem;
 }
 
 #rSeeMore {
     background: var(--primary-color);
+    margin-top: 1rem;
 }
 
 .homeHeader-middle {
@@ -182,12 +186,11 @@ p {
     color: white;
     text-align: center;
     font-size: 1.9rem;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Oxygen', sans-serif;
     padding-top: 1rem;
 }
 
 footer {
-    /*    background: var(--primary-color);*/
     width: 100%;
     height: 3rem;
     display: flex;
