--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ footer a:last-child {
     grid-gap: 12rem;
     margin-bottom: 11rem;
     color: white;
+    display: none;
 }
 
 .findDiv {
@@ -275,6 +276,7 @@ footer a:last-child {
     grid-gap: 12rem;
     margin-bottom: 11rem;
     color: white;
+    display: none;
 }
 
 .shareDiv {
@@ -290,6 +292,7 @@ footer a:last-child {
     grid-gap: 12rem;
     margin-bottom: 11rem;
     color: white;
+    display: none;
 }
 
 .rateDiv {
