--- a/style.css
+++ b/style.css
@@ -223,7 +223,8 @@ footer a:last-child {
 }
 
 /*Home Main Content*/
-.mainContent {
+#mainContent {
+    width: 100%;
     margin-top: 2rem;
     display: flex;
     flex-direction: column;
@@ -231,22 +232,22 @@ footer a:last-child {
     background: black;
 }
 
-.mainContent img {
+#mainContent img {
+    margin: 0 auto;
+    margin-top: 2rem;
     border-radius: 12px;
-    width: 100%;
-    height: 100%;
+    width: 30%;
+    height: auto;
 }
 
 .mainCreate {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
     color: white;
 }
 
 .createDiv {
+    width: 30%;
     text-align: center;
+    margin: 0 auto;
 }
 
 .mainFind {
@@ -258,8 +259,9 @@ footer a:last-child {
 }
 
 .findDiv {
+    width: 30%;
     text-align: center;
-    align-self: center;
+    margin: 0 auto;
 }
 
 .mainShare {
@@ -271,8 +273,9 @@ footer a:last-child {
 }
 
 .shareDiv {
+    width: 30%;
     text-align: center;
-    align-self: center;
+    margin: 0 auto;
 }
 
 .mainRate {
@@ -284,8 +287,9 @@ footer a:last-child {
 }
 
 .rateDiv {
+    width: 30%;
     text-align: center;
-    align-self: center;
+    margin: 0 auto;
 }
 
 /*About Styling*/
