--- a/style.css
+++ b/style.css
@@ -28,8 +28,17 @@ p {
 /*Animation Classes*/
 
 /*Home Styling*/
+html {
+    min-height: calc(100vh - 124px);
+}
+
+.mainContent {
+    overflow: hidden;
+}
+
 .b2 {
     background: black;
+    overflow-y: scroll;
 }
 
 #menu {
@@ -205,15 +214,16 @@ footer a:last-child {
 /*Home Main Content*/
 
 .slick-arrow:hover {
-    cursor:pointer;
+    cursor: pointer;
 }
 
 #mainContent {
+    height: 0;
     width: 100%;
     margin-top: 2rem;
     display: flex;
     flex-direction: column;
-    display: none;
+    visibility: hidden;
     background: black;
 }
 
