--- a/style.css
+++ b/style.css
@@ -28,17 +28,13 @@ p {
 /*Animation Classes*/
 
 /*Home Styling*/
-html {
-    min-height: calc(100vh - 124px);
-}
-
 .mainContent {
     overflow: hidden;
 }
 
 .b2 {
     background: black;
-    overflow-y: scroll;
+    overflow: hidden;
 }
 
 #menu {
@@ -126,6 +122,7 @@ html {
 }
 
 .homeHeader-top {
+    margin-top: 0rem;
     position: relative;
     z-index: 2;
     display: flex;
@@ -214,13 +211,12 @@ footer a:last-child {
 /*Home Main Content*/
 
 .slick-arrow:hover {
-    cursor: pointer;
+    cursor:pointer;
 }
 
 #mainContent {
     height: 0;
     width: 100%;
-    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     visibility: hidden;
