--- a/style.css
+++ b/style.css
@@ -256,8 +256,14 @@ footer a:last-child {
 
 /*About Styling*/
 .about {
-    width: 35%;
+    width: 100%;
     margin: 0 auto;
+    position: absolute;
+    z-index: 2;
+    /*
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+*/
 }
 
 .contributors {
@@ -288,7 +294,14 @@ p {
 
 .people {
     text-align: center;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
+}
+
+.description {
+    width: 50%;
 }
 
 .gImages {
