--- a/slick-1.8.1/slick/slick-theme.css
+++ b/slick-1.8.1/slick/slick-theme.css
@@ -175,7 +175,7 @@
 
 .slick-dots li button:before {
     font-family: 'slick';
-    font-size: 1rem;
+    font-size: .6rem;
     line-height: 20px;
 
     position: absolute;
