--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ p {
 .b2 {
     background: black;
     overflow: hidden;
+    overflow-x: hidden;
 }
 
 #menu {
@@ -159,7 +160,7 @@ p {
 
 footer {
     width: 100%;
-    height: 3rem;
+    height: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -255,6 +256,11 @@ footer a:last-child {
 }
 
 /*About Styling*/
+.aBody {
+    background: black;
+    overflow: hidden;
+}
+
 .about {
     width: 100%;
     margin: 0 auto;
@@ -295,7 +301,7 @@ p {
 .people {
     text-align: center;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     align-items: center;
 }
@@ -703,5 +709,17 @@ p {
 
     .aboutHeader {
         font-size: 2rem;
+    }
+
+    .description {
+        width: 80%;
+    }
+
+    .contributors h3 {
+        font-size: .9rem;
+    }
+
+    .contributors p {
+        font-size: .7rem;
     }
 }
